plugins {
	id 'java'
	id 'application'
	id 'org.springframework.boot' version '4.0.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'gg.jte.gradle' version '3.1.16'
}

group = 'com.github.schneidervs'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/milestone' }
	maven { url = 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'gg.jte:jte-spring-boot-starter-3:3.1.16'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	implementation 'org.xerial:sqlite-jdbc:3.50.1.0'
	implementation 'org.hibernate.orm:hibernate-community-dialects:7.0.1.Final'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jte {
	generate()
	binaryStaticContent = true
}

tasks.named('test') {
	useJUnitPlatform()
}

bootRun {
	jvmArgs = ["--enable-native-access=ALL-UNNAMED"]
}

application {
	mainClass = 'com.github.schneidervs.invoicecreator.InvoiceCreatorApplication'
	applicationDefaultJvmArgs = ["--enable-native-access=ALL-UNNAMED"]
}
